--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 5px;
 }
 
 .flex-container-col {
@@ -22,27 +23,33 @@
 
 .grid-container {
     display: flex;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+}
+
+.bottom-border {
+    border-bottom: 1px solid black;
 }
 
 .side-container {
     width: 200px;
     height: 200px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .container {
     display: grid;
-    border: solid 1px black;
+    /* border: solid 1px black; */
 }
 
 .sudoku-cell {
     display: flex;
-    border: solid 1px black;
+    /* border: solid 1px black; */
     width: 50px;
     height: 50px;
     text-align: center;
     transition: .1s;
-    z-index: 2;
+    border-right: 1px solid black;
 }
 
 .sudoku-cell:hover {
