--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: darkgray;
+    background-color: lightgray;
     box-sizing: border-box;
 }
 
@@ -54,8 +54,9 @@
 
 .sudoku-cell:hover {
     cursor: pointer;
+    background-color: lightcoral;
 }
 
 .selected-cell {
-    background-color: rgba(255, 0, 0, 1);
+    background-color: lightcoral;
 }
