--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@
     border-left: 1px solid black;
 }
 
+.grid-container:nth-child(4), .grid-container:nth-child(7) {
+    border-top: 2px solid darkblue;
+}
+
 .bottom-border {
     border-bottom: 1px solid black;
 }
@@ -50,6 +54,10 @@
     text-align: center;
     transition: .1s;
     border-right: 1px solid black;
+}
+
+.sudoku-cell:nth-child(3), .sudoku-cell:nth-child(6) {
+    border-right: 2px solid darkblue;
 }
 
 .sudoku-cell:hover {
