--- a/css/styles.css
+++ b/css/styles.css
@@ -44,10 +44,20 @@
     display: grid;
 }
 
-.sudoku-cell {
+.sudoku-number {
     display: flex;
-    width: 50px;
-    height: 50px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    grid-area: 1 / 1 / 1 / 1;
+    background-color: rgb(0, 0, 0, .001);
+}
+
+.sudoku-cell {
+    display: grid;
+    grid-template-rows: 50px;
+    grid-template-columns: 50px;
     text-align: center;
     transition: .1s;
     border-right: 1px solid black;
@@ -61,11 +71,11 @@
 
 .sudoku-cell:hover {
     cursor: pointer;
-    background-color: lightcoral;
+    background-color: rgb(240, 128, 128, .1);
 }
 
 .selected-cell {
-    background-color: lightcoral;
+    background-color: rgb(240, 128, 128, .1);
 }
 
 .modifiable {
@@ -75,4 +85,57 @@
 
 .hide {
     display: none;
+}
+
+.note-container {
+    display: grid;
+    grid-area: 1 / 1 / 1 / 1;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+        "note-1 note-2 note-3"
+        "note-4 note-5 note-6"
+        "note-7 note-8 note-9";
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.note-container > div {
+    font-size: 10.5px;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.note-1 {
+    grid-area: note-1;
+}
+
+.note-2 {
+    grid-area: note-2;
+}
+
+.note-3 {
+    grid-area: note-3;
+}
+
+.note-4 {
+    grid-area: note-4;
+}
+
+.note-5 {
+    grid-area: note-5;
+}
+
+.note-6 {
+    grid-area: note-6;
+}
+
+.note-7 {
+    grid-area: note-7;
+}
+
+.note-8 {
+    grid-area: note-8;
+}
+
+.note-9 {
+    grid-area: note-9;
 }
