--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+canvas {
+    background-color: transparent;
+}
+
 .flex-container, .flex-container-col, .sudoku-cell {
     display: flex;
     align-items: center;
@@ -73,15 +77,19 @@
 
 .sudoku-cell:hover {
     cursor: pointer;
-    background-color: rgb(240, 128, 128, .7);
+    background-color: rgb(128, 128, 240, .7);
 }
 
 .selected-cell {
-    background-color: rgb(240, 128, 128, .3);
+    background-color: rgb(128, 128, 240, .3);
 }
 
 .selected-cell-dark {
-    background-color: rgb(240, 128, 128, .7);
+    background-color: rgb(128, 128, 240, .7);
+}
+
+.selected-cell-undo {
+    background-color: rgb(128, 128, 240, .85);
 }
 
 .modifiable {
@@ -145,4 +153,40 @@
 
 .note-9 {
     grid-area: note-9;
+}
+
+.error {
+    color: red;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(0,0,0,.4);
+    width: 100%;
+    height: 100%;
+}
+
+.modal-content {
+    top: 50%;
+    left: 50%;
+    position: fixed;
+    padding: 25px;
+    width: 250px;
+    height: 250px;
+    animation-name: fromtop;
+    animation-duration: .75s;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+}
+
+.close {
+    float: right;
+    cursor: pointer; 
+}
+
+@keyframes fromtop {
+    from {top: -50%; opacity: 0;}
+    to {top: 50%; opacity: 1;}
 }
