--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
     background-color: white;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 button {
@@ -184,7 +187,7 @@ canvas {
     z-index: 1;
     background-color: rgba(0,0,0,.4);
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .modal-content {
