--- a/css/styles.css
+++ b/css/styles.css
@@ -78,12 +78,13 @@ canvas {
     grid-area: 1 / 1 / 1 / 1;
     background-color: rgb(0, 0, 0, .001);
     pointer-events: all;
+    font-size: 2em;
 }
 
 .sudoku-cell {
     display: grid;
-    grid-template-rows: 50px;
-    grid-template-columns: 50px;
+    grid-template-rows: 70px;
+    grid-template-columns: 70px;
     text-align: center;
     transition: .1s;
     border-right: 1px solid black;
@@ -121,7 +122,7 @@ canvas {
 
 .hide {
     display: none;
-    animation-name: opacityFadeHide;
+    animation-name: opacityFadeHideGrid;
     animation-duration: .5s;
 }
 
@@ -137,8 +138,12 @@ canvas {
     background-color: rgba(0, 0, 0, 0);
 }
 
+.note-container.hide {
+    display: none;
+}
+
 .note-container > div {
-    font-size: 10.5px;
+    font-size: 1em;
     background-color: rgba(0, 0, 0, 0);
     color: black;
 }
@@ -222,6 +227,12 @@ canvas {
     height: 40px;
 }
 
+#timer-box {
+    box-sizing: border-box;
+    height: 26px;
+    border: solid 1px transparent;
+}
+
 @keyframes fromtop {
     from {top: -50%; opacity: 0;}
     to {top: 50%; opacity: 1;}
@@ -267,7 +278,13 @@ canvas {
     to { display: none; opacity: 0;}
 }
 
-@media screen and (max-width: 800px) {
+@keyframes opacityFadeHideGrid {
+    from { display: grid; opacity: 1;}
+    to { display: none; opacity: 0;}
+}
+
+/* Add more screen sizes */
+@media screen and (max-width: 965px) {
 
     body {
         height: 100vh;
@@ -293,6 +310,10 @@ canvas {
     .sudoku-cell {
         grid-template-rows: 40px;
         grid-template-columns: 40px;
+    }
+
+    .sudoku-number {
+        font-size: 1em;
     }
 
     .note-container > div {
