--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,8 @@
 }
 
 button {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 10px;
     border: 1px solid gray;
     transition: .5s;
@@ -30,10 +30,10 @@ canvas {
 
 .flex-container, .flex-container-col, .sudoku-cell {
     display: flex;
-    align-items: center;
     justify-content: center;
     gap: 5px;
     flex-wrap: wrap;
+    
 }
 
 .flex-container-col {
@@ -42,6 +42,9 @@ canvas {
 }
 
 .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
@@ -60,7 +63,6 @@ canvas {
 }
 
 .side-container {
-    width: 300px;
     align-items: flex-start;
     justify-content: flex-start;
 }
@@ -83,8 +85,8 @@ canvas {
 
 .sudoku-cell {
     display: grid;
-    grid-template-rows: 70px;
-    grid-template-columns: 70px;
+    grid-template-rows: 60px;
+    grid-template-columns: 60px;
     text-align: center;
     transition: .1s;
     border-right: 1px solid black;
@@ -143,7 +145,7 @@ canvas {
 }
 
 .note-container > div {
-    font-size: 1em;
+    font-size: .8em;
     background-color: rgba(0, 0, 0, 0);
     color: black;
 }
@@ -219,18 +221,51 @@ canvas {
     display: flex;
     flex-wrap: wrap;
     gap: 5px 5px;
-    width: 200px;
+    width: 255px;
+    justify-content: space-between;
 }
 
 .keypad-key {
-    width: 50px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
+}
+
+.extra-buttons {
+    margin-top: 5px;
+    display: flex;
+    width: 255px;
+    justify-content: space-between;
+    gap: 5px;
+}
+
+.extra-buttons > button {
+    width: 100%;
 }
 
 #timer-box {
     box-sizing: border-box;
     height: 26px;
     border: solid 1px transparent;
+}
+
+#toggle-checkbox-container {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+}
+
+#note-toggle-checkbox {
+    width: 30px;
+    height: 30px;
+}
+
+#conflict-message-container {
+    border: 1px solid transparent;
+    height: 25px;
+}
+
+#side-menu {
+    justify-content: space-between;
 }
 
 @keyframes fromtop {
@@ -283,17 +318,44 @@ canvas {
     to { display: none; opacity: 0;}
 }
 
-/* Add more screen sizes */
-@media screen and (max-width: 965px) {
+/* @media screen and (max-width: 1400px) {
+    .sudoku-cell {
+        grid-template-rows: 80px;
+        grid-template-columns: 80px;
+    }
+
+    .keypad {
+        width: 400px;
+    }
+
+    button {
+        width: 100px;
+        height: 100px;
+    }
+
+    .keypad-key {
+        border: 2px solid blue;
+        width: 120px;
+        height: 120px;
+        font-size: 2em;
+    }
+} */
+
+@media screen and (max-width: 850px) {
+    .sudoku-cell {
+        grid-template-rows: 50px;
+        grid-template-columns: 50px;
+    }
 
     body {
         height: 100vh;
+        width: 100vw
     }
 
     #main-container {
         flex-direction: column;
     }
-
+    
     .flex-container {
         flex-wrap: wrap;
     }
@@ -307,25 +369,57 @@ canvas {
         width: 70%;
     }
 
-    .sudoku-cell {
-        grid-template-rows: 40px;
-        grid-template-columns: 40px;
-    }
-
     .sudoku-number {
         font-size: 1em;
     }
 
     .note-container > div {
-        font-size: 9px
+        font-size: 10px;
     }
 
     .side-container {
+        align-items: center;
         width: 100%;
         height: 100%;
     }
 
     .keypad {
-        width: 170px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    .keypad-key {
+        border: 2px solid blue;
+        width: 9%;
+        height: 50px;
+        font-size: 1em;
+    }
+
+    button {
+        width: 50px;
+        height: 50px;
+    }
+}
+
+/* Add more screen sizes */
+@media screen and (max-width: 600px) {
+    .sudoku-cell {
+        grid-template-rows: 37px;
+        grid-template-columns: 37px;
+    }
+
+    .note-container > div {
+        font-size: 8px;
+    }
+}
+
+@media screen and (max-width: 280px) {
+    .sudoku-cell {
+        grid-template-rows: 29px;
+        grid-template-columns: 29px;
+    }
+
+    .note-container > div {
+        font-size: 7px;
     }
 }
